Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,4 +30,5 @@ steps:
     Dockerfile: '**/Dockerfile'
 - task: Docker@2
   inputs:
+    repository: team6registry.azurecr.io
     command: 'push'
